fixed an issue where translate on the index.html and learnmore.html pages would force a scrollbar to exist at the bottom of the screen

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -127,17 +127,14 @@ header, nav, .nav-wrapper {
 }
 
 .translate-center {
-	transform: translate(10%, 50%);
-}
-
-.translate-center-about {
-	transform: translate(10%, 35%);
+	transform: translateY(35%);
 }
 
 .card {
 	max-width: 80%;
 	box-shadow: 0 5px 5px 0 rgb(0 0 0 / 14%), 0 5px 5px 0 rgb(0 0 0 / 12%), 0 3px 1px -2px rgb(0 0 0 / 20%);
 	border-radius: 7px;
+	margin: 0;
 }
 
 .btn {
@@ -155,4 +152,8 @@ a:hover {
 
 .yellow-text {
 	color: yellow;
+}
+
+.max-width-eighty-percent {
+	max-width: 80%;
 }
